# recommender-systems

collaborative-filtering/: .gitignore  README.md  pyproject.toml
collaborative-filtering/src/: data.py
collaborative-filtering/src/item_item/: __main__.py  item_item.py
collaborative-filtering/src/user_user/: __main__.py  main.py  user_user.py
collaborative-filtering/user_user/notebooks/: eda.ipynb
collaborative-filtering/user_user/src/: main.py  user_user.py
matrix-factorization/: README.md  pyproject.toml
matrix-factorization-tensorflow/: data.py  mf.py  requirements.gpu.txt  requirements.txt
matrix-factorization-tensorflow/src/: data.py  main.py  main_autorec.py
matrix-factorization-tensorflow/src/model/: autorec.py  losses.py  mf.py
matrix-factorization/notebooks/: eda.ipynb
matrix-factorization/src/: loss.py  main.py  mf.py
matrix-factorization/src/algorithm/: __init__.py  mf.py
matrix-factorization/src/algorithm/optimizers/: __init__.py  als.py  als_bias.py  base.py
matrix-factorization/src/algorithm/strategy/: __init__.py  als.py  als_bias.py  base.py  bias.py  default.py
mf-on-spark/: .gitignore  README.md  pyproject.toml  spark.py
rbm-tensorflow/: hello.py  main.py  main2.py  model.py  pyproject.toml
rbm-tensorflow/src/: data.py  main.py  main2.py  preprocess.py
rbm-tensorflow/src/models/: bernoulli_rbm.py  cat_rbm.py
