[project]
name = "collaborative-filtering"
version = "0.1.0"
description = ""
authors = [
    {name = "sadelcarpio", email = "sadelcarpioa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "matplotlib>=3.9.0",
    "kaggle>=1.6.14",
    "jupyter>=1.0.0",
]
